--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="es"> <!--<![endif]-->
 <head>
 
 	<!-- Basic Page Needs
@@ -59,7 +59,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46811000-1', 'hello.org');
+  ga('create', 'UA-71340019-2', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -84,10 +84,11 @@
                 <li><a href='#home'>HOME</a></li>
                 <li><a href='#service'>SERVICE</a></li>
                 <li><a href='#team'>TEAM</a></li>
-                <li><a href='#skills'>SKILLS</a></li>
                 <li><a href='#portfolio'>PORTFOLIO</a></li>
                 <li><a href='#price'>PRICE</a></li>
                 <li><a href='#contact'>CONTACT</a></li>
+                <li><a href='/english'>ENGLISH</a></li>
+            	<!--<li><a href='#skills'>SKILLS</a></li>-->
             </ul>
           </div>
         </nav>
@@ -259,7 +260,7 @@
 </div>
 
 
-
+<!--
 <div class="skills" id="skills">
     <div class="container">
 
@@ -287,7 +288,7 @@
 
     </div>
 </div>
-
+-->
 
 
 <div id="portfolio">
