added meta keywords
### added meta keywords
-iglesia, 
-sembradores, 
-guatemala, 
-sdv, 
-sdvgt, 
-clubhouse, 
-Jesus, 
-vida, 
-de,

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta charset="utf-8">
 	<title>Sembradores de Vida</title>
 	<meta name="description" content="Iglesia Sembradores de Vida">
+	<meta name="keywords" content="iglesia, sembradores, guatemala, sdv, sdvgt, clubhouse, Jesus, vida, de,">
 	<meta name="author" content="">
 
 	<!-- Mobile Specific Metas
