--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <li>
             <div class="sixteen columns slide1">
               <p class="center"><img class="scale-with-grid" src="images/logo.svg" height="500px" width="500px" alt="logo big"></p>
-              <h1 class="white">Sembradores de vida Portfolio</h1>
+              <h1 class="white">Sembradores de vida</h1>
               <h3 class="white"><span>RESPONSIVE WEBSITE TEMPLATE</span></h3>
              </div>
           </li>
