--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
           </li>
          <li>
             <div class="sixteen columns slide2">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/image2.png" alt="logo big"></p>
               <h3 class="white">OPTIMIZED FOR MOBIL DEVICES</h3>
             </div>
             </li>
           <li>
             <div class="sixteen columns slide3">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image2.JPG" alt="logo big"></p>
-              <h3 class="white">JPG format supported?</h3>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/image3.png" alt="logo big"></p>
+              <h3 class="white">Another PNG</h3>
             </div>
             </li>
             <li>
             <div class="sixteen columns slide4">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image3.png" alt="logo big"></p>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
               <h3 class="white"><span>Le wild guess</span></h3>
              </div>
             </li>
