changed to rainbow dash colors

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
    <div class="sixteen columns">
 
-        <h2 class="white" >Get in Touch</h2>
+        <h2 class="white" >Contactanos</h2>
          <hr class="white" >
          <p class="center white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
 
@@ -467,13 +467,13 @@
 
        <div class="two-thirds column form">
                  <form action="#" id="commentForm" method="post" name="commentForm">
-                       <input class="required name" id="name" name="name" type="text" value="Name*" onFocus="if(this.value=='Name*') this.value=''"/>
-                       <input class="required email" id="email" name="email" type="text" value="Email*" onFocus="if(this.value=='Email*') this.value=''"/>
-                       <input class="phone" id="phone" name="phone" type="text" value="Phone" onFocus="if(this.value=='Phone') this.value=''"/>
-                       <input class="website" id="website" name="website" type="text" value="Website" onFocus="if(this.value=='Website') this.value=''"/>
-                       <textarea class="required message" name="message" onFocus="if(this.value=='Message*') this.value=''">Message*</textarea>
-                       <button class="btn">Send</button>
-                       <p class="white">Required fields are marked *</p>
+                       <input class="required name" id="name" name="name" type="text" value="Nombre*" onFocus="if(this.value=='Nombre*') this.value=''"/>
+                       <input class="required email" id="email" name="email" type="text" value="Correo Electronico*" onFocus="if(this.value=='Correo Electronico*') this.value=''"/>
+                       <input class="phone" id="phone" name="phone" type="text" value="Telefono" onFocus="if(this.value=='Telefono') this.value=''"/>
+                       <!-- <input class="website" id="website" name="website" type="text" value="Website" onFocus="if(this.value=='Website') this.value=''"/> -->
+                       <textarea class="required message" name="message" onFocus="if(this.value=='Mensaje*') this.value=''">Mensaje*</textarea>
+                       <button class="btn">Enviar</button>
+                       <p class="white">Los campos requeridos estan marcados con *</p>
                   </form>
        </div>
 
