added email php handler

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     </div>
 
        <div class="two-thirds column form">
-                 <form action="#" id="commentForm" method="post" name="commentForm">
+                 <form action="#" id="commentForm" method="post" name="commentForm" action="./php/send_form_email.php">
                        <input class="required name" id="name" name="name" type="text" value="Nombre*" onFocus="if(this.value=='Nombre*') this.value=''"/>
                        <input class="required email" id="email" name="email" type="text" value="Correo Electronico*" onFocus="if(this.value=='Correo Electronico*') this.value=''"/>
                        <input class="phone" id="phone" name="phone" type="text" value="Telefono" onFocus="if(this.value=='Telefono') this.value=''"/>
