changed mobile icon

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
          <p class="white center">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
 
          <div class="four columns alpha">
-         <img class="center circle scale-with-grid" id="rotate" src="./images/icons/flatdesign.svg">
+         <img class="center circle scale-with-grid" id="rotate" src="./images/icons/youtube.svg">
          <h4 class="white">Responsive Design</h4>
          <p class="center white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
          </br>
