--- a/index.html
+++ b/index.html
@@ -157,30 +157,30 @@
 
          <div class="four columns alpha">
          <img class="center circle scale-with-grid" id="rotate" src="./images/icons/youtube.svg">
-         <h4 class="white">Responsive Design</h4>
-         <p class="center white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+         <h4 class="white">Canal Youtube</h4>
+         <p class="center white">Videos y producciones en canal de youtube propio, exposición tanto de palabra como trabajo.</p>
          </br>
-         <p class="center"><a href="http://www.fabianbentz.de/demo/owl/owl-theme.zip" target="_blank"  class="btndow">Download Theme</a></p>
+         <p class="center"><a href="http://www.fabianbentz.de/demo/owl/owl-theme.zip" target="_blank"  class="btndow">Link Canal</a></p>
          </div>
 
          <div class="four columns alpha">
          <img class="center circle scale-with-grid" id="rotate" src="./images/icons/soundcloud.svg">
-         <h4 class="white">Easy Customizable</h4>
-         <p class="center white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+         <h4 class="white">Audio de Predicas</h4>
+         <p class="center white">El audio de las predicas almacenado en algun servicio de nube, soundcloud propuesto.</p>
          </br>
-         <p class="center"><a href="http://www.fabianbentz.de/demo/owl/owl-theme.zip" target="_blank"  class="btndow">Download Theme</a></p>
+         <p class="center"><a href="http://www.fabianbentz.de/demo/owl/owl-theme.zip" target="_blank"  class="btndow">Soundcloud</a></p>
          </div>
 
          <div class="four columns alpha">
-         <img class="center circle scale-with-grid" id="rotate" src="./images/icons/portfolio.svg">
-         <h4 class="white">Porfolio</h4>
-         <p class="center white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+         <img class="center circle scale-with-grid" id="rotate" src="./images/icons/blog.svg">
+         <h4 class="white">Blog</h4>
+         <p class="center white">Blog como un diario y punto de discusion, contenido medianmente mas extenso.</p>
          </br>
          <p class="center"><a href="http://www.fabianbentz.de/demo/owl/owl-theme.zip" target="_blank"  class="btndow">Download Theme</a></p>
          </div>
 
          <div class="four columns alpha omega">
-         <img class="center circle scale-with-grid" id="rotate" src="./images/icons/mail.svg">
+         <img class="center circle scale-with-grid" id="rotate" src="./images/icons/blog2.svg">
          <h4 class="white">PHP Mail Form</h4>
          <p class="center white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
          </br>
