--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="sixteen columns slide1">
               <p class="center"><img class="scale-with-grid" src="images/logo.svg" height="500px" width="500px" alt="logo big"></p>
               <h1 class="white">Sembradores de vida</h1>
-              <h3 class="white"><span>RESPONSIVE WEBSITE TEMPLATE</span></h3>
+              <h3 class="white"><span>Jesus Online, such wow!</span></h3>
              </div>
           </li>
          <li>
@@ -125,20 +125,20 @@
             </li>
             <li>
             <div class="sixteen columns slide4">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white"><span>Le wild guess</span></h3>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/image4.png" alt="logo big"></p>
+              <h3 class="white"><span>Circle</span></h3>
              </div>
             </li>
             <li>
             <div class="sixteen columns slide5">
               <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white"><span>RESPONSIVE PRICE TABLES</span></h3>
+              <h3 class="white"><span>Le wild guess</span></h3>
              </div>
             </li>
             <li>
             <div class="sixteen columns slide6">
               <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white"><span>SKILL BARS</span></h3>
+              <h3 class="white"><span>Le wild guess 2</span></h3>
              </div>
             </li>
        </ul>
