--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 	<script type="text/javascript" src="javascripts/responsivemobilemenu.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.flexslider.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.testemonialslider.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.prettyPhoto.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.quicksand.js"></script>
 	<script type="text/javascript" src="javascripts/script.js"></script>
@@ -89,7 +88,7 @@
                 <li><a href='#price'>PRICE</a></li>
                 <li><a href='#contact'>CONTACT</a></li>
                 <li><a href='/english'>ENGLISH</a></li>
-            	<!--<li><a href='#skills'>SKILLS</a></li>-->
+            	  <li><a href='#skills'>SKILLS</a></li>
             </ul>
           </div>
         </nav>
@@ -189,6 +188,7 @@
 
         </div>
 
+				<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
     </div>
 </div>
 
