commented out skills, changed portfolio classification and price titles

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <li><a href='#price'>PRICE</a></li>
                 <li><a href='#contact'>CONTACT</a></li>
                 <li><a href='/english'>ENGLISH</a></li>
-            	  <li><a href='#skills'>SKILLS</a></li>
+            	  <!--<li><a href='#skills'>SKILLS</a></li> -->
             </ul>
           </div>
         </nav>
@@ -261,7 +261,7 @@
 </div>
 
 
-
+<!--
 <div class="skills" id="skills">
     <div class="container">
 
@@ -289,7 +289,7 @@
 
     </div>
 </div>
-
+-->
 
 
 <div id="portfolio">
@@ -305,10 +305,10 @@
    <!-- Category Filter -->
 
 	<ul class="filter group">
-		<li class="current all"><a href="#">All</a></li>
-		<li class="webdesign"><a href="#">Webdesign</a></li>
-		<li class="branding"><a href="#">Branding</a></li>
-		<li class="printdesign"><a href="#">Printdesign</a></li>
+		<li class="current all"><a href="#">Todo</a></li>
+		<li class="semillas"><a href="#">Semillas</a></li>
+		<li class="comedores"><a href="#">Comedores</a></li>
+		<li class="iglesia"><a href="#">Iglesia</a></li>
 	</ul>
 
    </div>
@@ -316,22 +316,22 @@
 <div class="sixteen columns">
 	<!-- Portfolio Items -->
 	<ul class="portfolio">
-		<li  data-id="id-1" data-type="webdesign">
+		<li  data-id="id-1" data-type="semillas">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
 		</li>
-		<li  data-id="id-2" data-type="webdesign">
+		<li  data-id="id-2" data-type="semillas">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
 		</li>
-		<li data-id="id-3" data-type="webdesign branding">
+		<li data-id="id-3" data-type="semillas comedores">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
 		</li>
-		<li data-id="id-4" data-type="webdesign branding">
+		<li data-id="id-4" data-type="semillas comedores">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
 		</li>
-		<li data-id="id-5" data-type="branding">
+		<li data-id="id-5" data-type="comedores">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
 		</li>
-		<li data-id="id-6" data-type="printdesign">
+		<li data-id="id-6" data-type="iglesia">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
 		</li>
 	</ul>
@@ -340,14 +340,14 @@
 </div>
 
 
-<!--
+
 <div id="price">
 
 <div class="container">
 
    <div class="sixteen columns intro">
 
-        <h2 class="white">Price</h2>
+        <h2 class="white">Iglesias</h2>
          <hr class="white">
          <p class="white center">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
 
@@ -356,7 +356,7 @@
           <div class="one-third column pricetable">
          <table class="pritab">
            <tr>
-            <th>Basic Price</th>
+            <th>Pacaya</th>
            </tr>
            <tr>
             <td class="cell price">15 EUR<p>per month</p></td>
@@ -385,7 +385,7 @@
   <div class="one-third column pricetable feature">
          <table class="pritab">
            <tr>
-            <th>Feature Price</th>
+            <th>Veramina</th>
            </tr>
            <tr>
             <td class="cell price">25 EUR<p>per month</p></td>
@@ -443,7 +443,7 @@
 
   </div>
 </div>
--->
+
 
 <!-- GOOGLE MAP -->
 
