--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
 
         <div class="sixteen columns">
 
-         <h2>Meet Our Team</h2>
+         <h2>Nuestro Equipo</h2>
          <hr>
          <p class="center">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
 
          <div class="four columns alpha member">
-         <img id="zoom" class="center scale-with-grid" src="./images/team/team.jpg">
+         <img id="zoom" class="center scale-with-grid" src="./images/team/past1.jpg">
          <h4>Jane Doe</h4>
          <h6>Founder / CEO</h6>
          <p class="center">Lorem ipsum dolor sit  sadipscing elitr, sed diam.</p>
