--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <nav>
           <div class='rmm' data-menu-style = "minimal">
             <ul>
-                <li><a href='#home'>HOME</a></li>
-                <li><a href='#service'>SERVICE</a></li>
-                <li><a href='#team'>TEAM</a></li>
-                <li><a href='#portfolio'>PORTFOLIO</a></li>
-                <li><a href='#price'>PRICE</a></li>
-                <li><a href='#contact'>CONTACT</a></li>
+                <li><a href='#home'>IGLESIA</a></li>
+                <li><a href='#service'>SERVICIOS</a></li>
+                <li><a href='#team'>EQUIPO</a></li>
+                <!--<li><a href='#portfolio'>PORTFOLIO</a></li>
+                <li><a href='#price'>PRICE</a></li> -->
+                <li><a href='#contact'>CONTACTO</a></li>
                 <li><a href='/english'>ENGLISH</a></li>
             	  <!--<li><a href='#skills'>SKILLS</a></li> -->
             </ul>
@@ -107,19 +107,21 @@
             <div class="sixteen columns slide1">
               <p class="center"><img class="scale-with-grid" src="images/logo.svg" height="500px" width="500px" alt="logo big"></p>
               <h1 class="white">Sembradores de vida</h1>
-              <h3 class="white"><span>Jesus Online, such wow!</span></h3>
+              <!--<h3 class="white"><span>Jesus Online, such wow</span></h3>-->
              </div>
           </li>
-         <li>
+<!--
+				 <li>
             <div class="sixteen columns slide2">
               <p class="center"><img class="scale-with-grid" src="images/flexslider/image2.png" alt="logo big"></p>
               <h3 class="white">OPTIMIZED FOR MOBIL DEVICES</h3>
             </div>
-            </li>
-          <li>
+         </li>
+-->
+					<li>
             <div class="sixteen columns slide3">
               <p class="center"><img class="scale-with-grid" src="images/flexslider/image3.png" alt="logo big"></p>
-              <h3 class="white">Another PNG</h3>
+              <h3 class="white"></h3>
             </div>
             </li>
             <li>
@@ -289,7 +291,7 @@
 
     </div>
 </div>
--->
+
 
 
 <div id="portfolio">
@@ -303,7 +305,7 @@
          <p class="center">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
 
    <!-- Category Filter -->
-
+<!--
 	<ul class="filter group">
 		<li class="current all"><a href="#">Todo</a></li>
 		<li class="semillas"><a href="#">Semillas</a></li>
@@ -315,6 +317,7 @@
 
 <div class="sixteen columns">
 	<!-- Portfolio Items -->
+<!--
 	<ul class="portfolio">
 		<li  data-id="id-1" data-type="semillas">
 			<a href="images/portfolio/1.png" rel="prettyPhoto[portfolio]"><img src="images/portfolio/1.png" class="scale-with-grid hov" alt="" /></a>
@@ -338,9 +341,9 @@
    </div>
   </div>
 </div>
+-->
 
-
-
+<!--
 <div id="price">
 
 <div class="container">
@@ -414,7 +417,7 @@
   <div class="one-third column pricetable">
          <table class="pritab">
            <tr>
-            <th>Expert Price</th>
+            <th>Betania</th>
            </tr>
            <tr>
             <td class="cell price">40 EUR<p>per month</p></td>
@@ -443,7 +446,7 @@
 
   </div>
 </div>
-
+-->
 
 <!-- GOOGLE MAP -->
 
