only one of our team spots is available with pastors info

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 
          <div class="four columns alpha member">
          <img id="zoom" class="center scale-with-grid" src="./images/team/past1.jpg">
-         <h4>Jane Doe</h4>
-         <h6>Founder / CEO</h6>
-         <p class="center">Lorem ipsum dolor sit  sadipscing elitr, sed diam.</p>
+         <h4>Fernando y Schwuanda Marroquin</h4>
+         <h6>Pastores Principales</h6>
+         <p class="center">Pastores principales</p>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/facebook.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/google.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/twitter.svg" alt=""></a>
@@ -217,7 +217,7 @@
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/dribbble.svg" alt=""></a>
          </div>
-
+<!--
          <div class="four columns alpha member">
          <img id="zoom" class="center scale-with-grid" src="./images/team/team.jpg">
          <h4>Jane Doe</h4>
@@ -256,7 +256,7 @@
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/dribbble.svg" alt=""></a>
          </div>
-
+-->
          </div>
 
     </div>
