fixed minor schwanda typo

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 
          <div class="four columns alpha member">
          <img id="zoom" class="center scale-with-grid" src="./images/team/past1.jpg">
-         <h4>Fernando y Schwuanda Marroquin</h4>
-         <h6>Pastores Principales</h6>
-         <p class="center">Pastores principales</p>
+         <h4>Fernando y Schwanda Marroquin</h4>
+         <h6>Pastores</h6>
+         <p class="center">Pastores principales de Sembradores de Vida</p>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/facebook.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/google.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/twitter.svg" alt=""></a>
